moonlight-rewrite/test/fixtures/CompileFail/ProofTheoremNameConstructor.hs
module ProofTheoremNameConstructor where

import Moonlight.Rewrite.ProofContext (ProofTheoremName (..))

constructorEscapes ProofTheoremName {} = ()
